# gst-nv12-send

./: CMakeLists.txt  udp_nv12_send.cc
